k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: odoo
  labels:
    app.kubernetes.io/name: odoo
    app.kubernetes.io/part-of: erp-wms-tms
