k8s/base/odoo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-service
  namespace: odoo
  labels:
    app.kubernetes.io/name: odoo
    app.kubernetes.io/part-of: erp-wms-tms
spec:
  type: ClusterIP
  ports:
    - port: 8069
      targetPort: 8069
      name: http
    - port: 8072
      targetPort: 8072
      name: longpolling
  selector:
    app.kubernetes.io/name: odoo
